Fixed alignment issues with dependencies tableRow class.

--- a/src/scss/hystrixCommand.scss
+++ b/src/scss/hystrixCommand.scss
@@ -67,7 +67,7 @@
 
 }
 
-.dependencies div.monitor_data div.counters div.cell {
+.dependencies div.monitor_data div.counters div.hystrix-cell {
   display: inline;
   float: right;
 }
@@ -78,7 +78,7 @@
   padding-left: 8px;
 }
 
-.dependencies div.cell .line {
+.dependencies div.hystrix-cell .line {
   display: block;
 }
 
@@ -98,25 +98,32 @@
   font-size: 8pt;
   margin: 0 auto;
   clear:both;
-  padding-left:26%;
+  //padding-left:26%;
 }
 
-.dependencies div.tableRow .cell {
+.dependencies div.tableRow .hystrix-cell {
   float:left;
 }
 
-.dependencies div.tableRow .header {
+.dependencies div.tableRow .hystrix-header {
   width:18%;
   text-align:right;
   padding-right:2%;
 }
 
-.dependencies div.tableRow .data {
+.dependencies div.tableRow .hystrix-header.hystrix-left {
+  width: 85px;
+}
+
+.dependencies div.tableRow .hystrix-header.hystrix-right {
+  width: 75px;
+}
+
+.dependencies div.tableRow .hystrix-data {
   width:17%;
   font-weight: bold;
   text-align:right;
 }
-
 
 .dependencies div.monitor {
   width: 245px; /* we want a fixed width instead of percentage as I want the boxes to be a set size and then fill in as many as can fit in each row ... this allows 3 columns on an iPad */
@@ -167,7 +174,7 @@
   color: grey;
 }
 
-.dependencies div.cell .errorPercentage {
+.dependencies div.hystrix-cell .errorPercentage {
   padding-left:5px;
   font-size: 12pt !important;
 }
