--- a/src/scss/monitor.scss
+++ b/src/scss/monitor.scss
@@ -1,40 +1,94 @@
-.container {
-  padding-left: 20px;
-  padding-right: 20px;
+.hystrix-outer-container html, .hystrix-outer-container body,
+//.hystrix-outer-container div, .hystrix-outer-container span,
+.hystrix-outer-container span,
+.hystrix-outer-container object, .hystrix-outer-container iframe,
+.hystrix-outer-container h1, .hystrix-outer-container h2,
+.hystrix-outer-container h3, .hystrix-outer-container h4,
+.hystrix-outer-container h5, .hystrix-outer-container h6,
+.hystrix-outer-container p, .hystrix-outer-container blockquote,
+.hystrix-outer-container pre, .hystrix-outer-container abbr,
+.hystrix-outer-container address, .hystrix-outer-container cite,
+.hystrix-outer-container code, .hystrix-outer-container del,
+.hystrix-outer-container dfn, .hystrix-outer-container em,
+.hystrix-outer-container img, .hystrix-outer-container ins,
+.hystrix-outer-container kbd, .hystrix-outer-container q,
+.hystrix-outer-container samp, .hystrix-outer-container small,
+.hystrix-outer-container strong, .hystrix-outer-container sub,
+.hystrix-outer-container sup, .hystrix-outer-container var,
+.hystrix-outer-container b, .hystrix-outer-container i,
+.hystrix-outer-container dl, .hystrix-outer-container dt,
+.hystrix-outer-container dd, .hystrix-outer-container ol,
+.hystrix-outer-container ul, .hystrix-outer-container li,
+.hystrix-outer-container fieldset, .hystrix-outer-container form,
+.hystrix-outer-container label, .hystrix-outer-container legend,
+.hystrix-outer-container table, .hystrix-outer-container caption,
+.hystrix-outer-container tbody, .hystrix-outer-container tfoot,
+.hystrix-outer-container thead, .hystrix-outer-container tr,
+.hystrix-outer-container th, .hystrix-outer-container td,
+.hystrix-outer-container article, .hystrix-outer-container aside,
+.hystrix-outer-container canvas, .hystrix-outer-container details,
+.hystrix-outer-container figcaption, .hystrix-outer-container figure,
+.hystrix-outer-container footer, .hystrix-outer-container header,
+.hystrix-outer-container hgroup, .hystrix-outer-container menu,
+.hystrix-outer-container nav, .hystrix-outer-container section,
+.hystrix-outer-container summary, .hystrix-outer-container time,
+.hystrix-outer-container mark, .hystrix-outer-container audio,
+.hystrix-outer-container video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  //box-sizing: ;
 }
 
-.row {
+.hystrix-container {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
+  line-height: 1;
+  font-size: 14px;
+}
+
+.hystrix-row {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
 }
 
-.spacer {
+.hystrix-spacer {
   width: 100%;
   margin: 0 auto;
-  padding-top:4px;
-  clear:both;
+  padding-top: 4px;
+  clear: both;
 }
 
-
-.menubar {
+.hystrix-menubar {
   overflow: hidden;
   border-bottom: 1px solid black;
 }
 
-.menubar div {
-  padding-bottom:5px;
+.hystrix-menubar div {
+  padding-bottom: 5px;
 
   margin: 0 auto;
   overflow: hidden;
 
   font-size: 80%;
-  font-family:'Bookman Old Style',Bookman,'URW Bookman L','Palatino Linotype',serif;
+  font-family: 'Bookman Old Style', Bookman, 'URW Bookman L', 'Palatino Linotype', serif;
 
-  float:left;
+  float: left;
 }
 
-.menubar .title {
+.hystrix-last {
+  margin-right: 0px;
+}
+
+
+.hystrix-menubar .title {
   float: left;
   padding-right: 20px;
 
@@ -45,18 +99,30 @@
   vertical-align: bottom;
 }
 
-.menubar .menu_actions {
+.hystrix-menubar .menu_actions {
   float: left;
-  position:relative;
+  position: relative;
   top: 4px;
 }
 
-.menubar .menu_legend {
+.hystrix-menubar .menu_legend {
   float: right;
-  position:relative;
+  position: relative;
   top: 4px;
 
 }
+
+.hystrix-menubar a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  text-decoration: underline;
+  color: -webkit-link;
+}
+
+
 
 h3.sectionHeader {
   color: black;
@@ -77,7 +143,7 @@ h3.sectionHeader {
 }
 
 .timeout {
-  color: #FF9900;	 /* shade of orange */
+  color: #FF9900; /* shade of orange */
 }
 
 .failure {
@@ -109,10 +175,10 @@ h3.sectionHeader {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
-#streamHeader  h2 {
-  float:left;
+#streamHeader h2 {
+  float: left;
   color: black;
-  position:relative;
+  position: relative;
   padding-left: 20px;
   top: 26px;
   //font-size: 20px;
@@ -129,93 +195,18 @@ h3.sectionHeader {
 }
 
 #hystrix-header h2 {
-  float:left;
+  float: left;
   color: black;
-  position:relative;
+  position: relative;
   padding-left: 20px;
   top: 26px;
-  //font-size: 20px;
-  font-size: 100%;
+  font-size: 20px;
+  //font-size: 100%;
   font-weight: bold;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 //////////////////////////////
-.hystrix-container {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin:0;
-  line-height: 1;
-  font-size: 14px;
-}
-
-.hystrix-row {
-  width: 100%;
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-.hystrix-spacer {
-  width: 100%;
-  margin: 0 auto;
-  padding-top:4px;
-  clear:both;
-}
-
-.hystrix-last {
-  margin-right: 0px;
-}
-
-.hystrix-menubar {
-  overflow: hidden;
-  border-bottom: 1px solid black;
-}
-
-.hystrix-menubar div {
-  padding-bottom:5px;
-
-  margin: 0 auto;
-  overflow: hidden;
-
-  font-size: 80%;
-  font-family:'Bookman Old Style',Bookman,'URW Bookman L','Palatino Linotype',serif;
-
-  float:left;
-}
-
-.hystrix-menubar .title {
-  float: left;
-  padding-right: 20px;
-
-  font-size: 110%;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: bold;
-
-  vertical-align: bottom;
-}
-
-.hystrix-menubar .menu_actions {
-  float: left;
-  position:relative;
-  top: 4px;
-}
-
-.hystrix-menubar a {
-  margin:0;
-  padding:0;
-  font-size:100%;
-  vertical-align:baseline;
-  background:transparent;
-  text-decoration: underline;
-  color: -webkit-link;
-}
-
-.hystrix-menubar .menu_legend {
-  float: right;
-  position:relative;
-  top: 4px;
-
-}
 
 @media screen and (max-width: 1100px) {
   .container {
